Fixed spacing issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,27 +7,29 @@
   display: flex;
   flex-flow: column;
   align-items: center;
+  padding: 20px;
 
   &::before {
-    position: absolute;
     content: "";
-    background: url("./img/utp_background.jpg") no-repeat left center fixed;
-    background-repeat: no-repeat;
+    background: url("./img/utp_background.jpg") no-repeat center fixed;
     background-size: cover;
     filter: brightness(0.3);
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
   }
 
   .screen-container {
+    display: flex;
+    flex-flow: column;
     overflow: hidden;
     width: $screen-container-width;
-    max-height: $screen-container-height;
-    margin: 20px auto;
-    height: auto;
+    height: $screen-container-height;
     background-color: #fff;
     border-radius: 10px;
-    z-index: 1;
+    z-index: 0;
   }
 }
