--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -10,19 +10,19 @@
   justify-content: space-evenly;
   align-items: center;
   z-index: 1;
-  padding: 5px;
+  padding: 10px 5px;
   border-bottom: 1px solid #0000003b;
 
   .menu-link {
     margin: 0 5px;
     font-size: 0.8em;
     text-align: center;
+    justify-content: center;
     color: $link-color;
     display: flex;
     text-decoration: none;
     height: auto;
     width: $link-width;
-    border-bottom: transparent 5px solid;
     align-items: center;
     flex-flow: column;
     justify-content: flex-end;
@@ -33,12 +33,13 @@
     border-radius: 50px;
 
     p {
-      margin: 5px;
+      margin: auto 5px;
+      font-size: 100%;
     }
 
     &:hover {
       background-color: $link-hover-bg;
-      color: $accent;
+      color: $link-hover-color;
     }
   }
 }
