--- a/src/components/welcomePanel.scss
+++ b/src/components/welcomePanel.scss
@@ -1,13 +1,17 @@
 @import "../themes/light_theme";
 
-.welcome-container {
+.welcomePanel-container {
+  @include card();
+
   box-sizing: border-box;
   z-index: 1;
   display: flex;
-  height: 100%;
-  width: 100%;
-  justify-content: space-evenly;
+  height: auto;
+  width: auto;
+  // justify-content: space-evenly;
   align-items: center;
+  overflow: hidden;
+  border-radius: 10px;
 
   iframe {
     margin: auto 0;
@@ -46,27 +50,29 @@
       background-color: $accent;
       display: flex;
       width: 100%;
-      height: 150px;
+      height: auto;
       justify-content: space-evenly;
-      padding: 20px 10px 0px 10px;
+      padding: 10px;
 
       .icon {
         display: flex;
         align-items: center;
-        width: 70px;
+        justify-content: center;
+        width: 90px;
+        height: 100%;
         flex-flow: column;
 
         i {
           text-align: center;
-          width: 50px;
-          height: 50px;
+          width: 40px;
+          height: 40px;
           padding: 5px;
           background-color: #ffffff;
           color: $accent;
           border-radius: 50%;
           display: flex;
           flex-flow: column;
-          font-size: 1.7em;
+          font-size: auto;
           align-items: center;
           justify-content: center;
         }
@@ -74,7 +80,7 @@
         p {
           color: #ffffff;
           text-align: center;
-          font-size: 0.9em;
+          font-size: 0.8em;
           margin: 10px 0px;
         }
       }
