--- a/src/containers/home.scss
+++ b/src/containers/home.scss
@@ -2,23 +2,21 @@
 
 .home-container {
   display: flex;
-  flex-flow: column;
-  width: auto;
-  height: auto;
-  padding: 50px 0px 0px 0px;
-  margin: 0;
+  min-width: 100%;
+  min-height: 100%;
+  padding: 10px;
+  margin: auto 0;
+  align-items: center;
+  justify-content: space-evenly;
+  align-self: center;
 
-  // &::before {
-  //   position: absolute;
-  //   content: "";
-  //   background: url("../img/utp_background.jpg") no-repeat left center fixed;
-  //   background-repeat: no-repeat;
-  //   background-size: cover;
-  //   filter: brightness(0.3);
-  //   width: 100%;
-  //   height: 100%;
-  //   position: fixed;
-  // }
+  iframe {
+    @include card();
+    width: 450px;
+    height: 270px;
+    border-radius: 10px;
+    align-self: flex-start;
+  }
 }
 
 @media only screen and (max-width: 600px) {
